--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProjetoVendas
 excludes=
+file.reference.dom4j-1.6.1.jar=..\\..\\Udemy\\Desenvolvimento Java\\BuscaCep\\dom4j-1.6.1.jar
 file.reference.jdbc-api-1.4.jar=lib\\jdbc-api-1.4.jar
 file.reference.lib-sqljdbc_12.4.2=lib\\sqljdbc_12.4.2
 file.reference.mysql-connector-j-8.1.0.jar=lib\\mysql-connector-j-8.1.0.jar
@@ -42,7 +43,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-8.1.0.jar}:\
     ${file.reference.lib-sqljdbc_12.4.2}:\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.jdbc-api-1.4.jar}
+    ${file.reference.jdbc-api-1.4.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
